kubernetes/helm/core/nginx-ingress-controller/manifests/home-assistant-external-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/upstream-vhost: 192.168.0.146
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP" # Set this if your Home Assistant is using HTTP
spec:
  rules:
  - host: ha.intropin.be
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-assistant-dummy
            port:
              number: 8123
